--- a/communication.html
+++ b/communication.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' https://code.jquery.com https://stackpath.bootstrapcdn.com https://cdnjs.cloudflare.com;
+  style-src 'self' 'unsafe-inline' https://stackpath.bootstrapcdn.com https://fonts.googleapis.com https://use.fontawesome.com;
+  font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
+  img-src 'self' data:;
+  object-src 'none';
+  base-uri 'self';
+  frame-ancestors 'none';
+">
+
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
