--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h2>Schützen Sie sich im Internet mit allgemeinen Handlungsempfehlungen zur IT-Sicherheit</h2>
+                            <h2>Schützen Sie sich im Internet mit Handlungsempfehlungen zur IT-Sicherheit</h2>
                             <span class="subheading">Für mehr Sicherheit im Internet</span>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                         <p>Das Internet bietet unzählige Möglichkeiten, birgt jedoch auch Risiken. Cyberkriminelle nutzen Schwachstellen, um persönliche Daten zu stehlen, Geräte zu infizieren oder finanzielle Schäden zu verursachen.
                             Auf dieser Plattform finden Sie praxisnahe und leicht verständliche Handlungsempfehlungen, die Ihnen helfen, sich besser vor Bedrohungen wie Phishing, Malware, Identitätsdiebstahl und Netzwerkangriffen zu schützen.
                             Die Empfehlungen basieren auf etablierten Sicherheitsstandards und richten sich an Verbraucherinnen und Verbraucher, die sicher im Internet unterwegs sein wollen – egal ob beim Online-Banking, Surfen, Social Media oder Online-Shopping.</p>
-                            <p>Wählen Sie eine der Kategorien aus, um allgemeine Handlungsempfehlungen für Ihre IT-Sicherheit zu erhalten.</p>
+                            <p>Wählen Sie eine der Kategorien aus, um Handlungsempfehlungen für Ihre IT-Sicherheit zu erhalten.</p>
                     </div>
 
 
@@ -155,7 +155,7 @@
         <hr class="my-4" />
         
                         <div class="small text-center text-muted fst-italic" style="font-size: 11px;">
-                            Diese Webseite bietet allgemeine Handlungsempfehlungen zur Verbesserung der IT-Sicherheitslage für Verbraucherinnen und Verbraucher. Die Inhalte basieren auf wissenschaftlichen Grundlagen und sollen dabei unterstützen, sich im digitalen Raum besser zu schützen. Die Inhalte dienen ausschließlich Informationszwecken und stellen keine rechtlich verbindlichen Handlungsempfehlungen dar. Die Nutzung erfolgt auf eigene Verantwortung.
+                            Diese Webseite bietet Handlungsempfehlungen zur Verbesserung der IT-Sicherheitslage für Verbraucherinnen und Verbraucher. Die Inhalte basieren auf wissenschaftlichen Grundlagen und sollen dabei unterstützen, sich im digitalen Raum besser zu schützen. Die Inhalte dienen ausschließlich Informationszwecken und stellen keine rechtlich verbindlichen Handlungsempfehlungen dar. Die Nutzung erfolgt auf eigene Verantwortung.
                         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
