--- a/transaction.html
+++ b/transaction.html
@@ -80,7 +80,7 @@
                         <div class="intro-text mb-4">
                             <h2>Sichere Transaktionen</h2>
                           </div>
-                        <p>Online-Banking ist eine sehr sensible Aktivität. Angreifer haben großes Interesse daran, Ihre Zugangsdaten für Bankkonten zu erlangen. Aus diesem Grund ist es wichtig, sich entsprechend vor solchen Gefahren zu schützen. Die nachstehenden allgemeinen Handlungsempfehlungen bieten Ihnen einen guten Grundschutz vor Angriffen auf Transaktionen im Web.</p>
+                        <p>Online-Banking ist eine sehr sensible Aktivität. Angreifer haben großes Interesse daran, Ihre Zugangsdaten für Bankkonten zu erlangen. Aus diesem Grund ist es wichtig, sich entsprechend vor solchen Gefahren zu schützen. Die nachstehenden Handlungsempfehlungen bieten Ihnen einen guten Grundschutz vor Angriffen auf Transaktionen im Web.</p>
                         <OL>
                             <LI><b>Prüfen Sie Verkäufer auf Seriosität: </b>Recherchieren Sie den Anbieter online und überprüfen Sie Bewertungen kritisch. Seien Sie vorsichtig bei Angeboten mit ausschließlich positiven Bewertungen, die unrealistisch erscheinen.</LI>
                             <LI><b>Überprüfen Sie Käufer auf Seriosität: </b>Prüfen Sie bei privaten Verkäufen, ob der potenzielle Käufer seriös ist, insbesondere bei ungewöhnlichen Anfragen oder unüblichen Zahlungsmethoden.</LI>
