--- a/web.html
+++ b/web.html
@@ -76,7 +76,7 @@
                         <div class="intro-text mb-4">
                             <h2>Sicher Surfen</h2>
                           </div>
-                        <p>Das Internet ist eine wertvolle Informationsquelle mit unzähligen Webseiten zu fast jedem Thema. Doch nicht alle Seiten sind vertrauenswürdig – einige enthalten schädliche Links oder führen zu gefälschten Webseiten, um Zugangsdaten zu stehlen. Mit den folgenden allgemeinen Handlungsempfehlungen surfen Sie sicherer und schützen sich vor potenziellen Gefahren.</p>
+                        <p>Das Internet ist eine wertvolle Informationsquelle mit unzähligen Webseiten zu fast jedem Thema. Doch nicht alle Seiten sind vertrauenswürdig – einige enthalten schädliche Links oder führen zu gefälschten Webseiten, um Zugangsdaten zu stehlen. Mit den folgenden Handlungsempfehlungen surfen Sie sicherer und schützen sich vor potenziellen Gefahren.</p>
                         <OL>
                             <LI><b>Installieren und aktualisieren Sie einen Virenschutz sowie eine Firewall:</b> Stellen Sie sicher, dass Ihr Virenschutzprogramm auf dem neuesten Stand ist und die Firewall aktiviert bleibt, um Ihr Gerät vor Schadsoftware zu schützen. </LI>
                             <LI><b>Nutzen Sie einen Werbeblocker:</b> Blockieren Sie unerwünschte Werbung, um das Risiko von Adware und bösartigen Werbelinks zu reduzieren. </LI>
