--- a/communication.html
+++ b/communication.html
@@ -80,7 +80,7 @@
                         <div class="intro-text mb-4">
                             <h2>Sichere Kommunikation</h2>
                           </div>
-                        <p>Egal, ob Sie telefonieren, Videoanrufe tätigen oder Textnachrichten über Messenger versenden: Die Kommunikation über das Internet ist größtenteils unverschlüsselt und somit ein beliebtes Angriffsziel, um persönliche Nachrichten abzugreifen. Die nachfolgenden allgemeinen Handlungsempfehlungen bieten eine gute Basisabsicherung, um sicher im Internet zu kommunizieren.</p>
+                        <p>Egal, ob Sie telefonieren, Videoanrufe tätigen oder Textnachrichten über Messenger versenden: Die Kommunikation über das Internet ist größtenteils unverschlüsselt und somit ein beliebtes Angriffsziel, um persönliche Nachrichten abzugreifen. Die nachfolgenden Handlungsempfehlungen bieten eine gute Basisabsicherung, um sicher im Internet zu kommunizieren.</p>
                         <OL>
                             <LI><b>Achten Sie auf eine sichere Verbindung:</b> Stellen Sie sicher, dass bei der Nutzung von E-Mail-Programmen im Browser stets eine durchgängige HTTPS-Verbindung besteht. Überprüfen Sie in der Browserleiste das Schlosssymbol und das „https://“.</LI>
                             <LI><b>Nutzen Sie Messenger-Dienste mit Ende-zu-Ende-Verschlüsselung:</b> Wählen Sie nur Dienste, die eine Ende-zu-Ende-Verschlüsselung unterstützen, um die Sicherheit Ihrer Nachrichten zu gewährleisten. </LI>
